cmake_minimum_required(VERSION 3.5)

project(2024_04_18-Lesson-05 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(2024_04_18-Lesson-05 main.cpp)

include(GNUInstallDirs)
install(TARGETS 2024_04_18-Lesson-05
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
